--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -1084,9 +1084,9 @@ td.jq_calculus_custom_empty_cell{
 .dc_image {
     display: block;
     float: left;
-    left: 0px;
+    left: 0;
     position: absolute;
-    top: 0px;
+    top: 0;
 	z-index:0;
 }
 
@@ -1125,18 +1125,13 @@ td.jq_calculus_custom_empty_cell{
 	   -moz-box-sizing:border-box;
 	        box-sizing:border-box;
 }
-.lt-ie8 .square {
-	behavior:url(/components/com_joomlaquiz/boxsizing.php);
-}
 .dc_buttons_container {
     margin-left: 10px;
 }
-
 .dc_buttons_container table
 {
 	width:100%;
 }
-
 .pause
 {
 	left: 170px;
@@ -1144,28 +1139,21 @@ td.jq_calculus_custom_empty_cell{
     top: 100px;
 	z-index:100;
 }
-
-.square {border-style:solid;} /* IE6-IE7*/
-html>/**/body .square {border-style:dotted;} /*all normal browsers*/
-
 .dc_time
 {
 	margin-top:10px;
 	clear:both;
 }
-
 .jq_quest_time_title
 {
 	display:block;
 	float:right;
 }
-
 .jq_quest_time_past
 {
 	margin-left:25px;
 	margin-bottom:10px;
 }
-
 .sortHelper
 {
 	border: 1px dashed #7BA428;
@@ -1216,6 +1204,14 @@ html>/**/body .square {border-style:dotted;} /*all normal browsers*/
 	display:block;
 	width:100%;
 	text-align:center;
+}
+.dc_pda_ver .dc_buttons_container {
+	margin: 20px auto;
+	width: 70%;
+}
+.dc_pda_ver .dc_buttons_container>table {
+	margin: 20px 0;
+	width: 100%;
 }
 .dc_pda_ver .cover {
 	float:none;
