--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
@@ -1093,20 +1093,18 @@ input.bwidth401:hover {
 	max-height:17px;
 }
 
-
-
-
-
 #jq_quiz_container hr{
 	clear: both;
 }
 
 .jq_question_answers_cont{
-	/*overflow:hidden;*/
 	width:85%;
-/*	padding-left: 20px;*/
-	/*float:left;*/
-} 
+}
+@media(max-width: 768px) {
+    .jq_question_answers_cont{
+        width:100%;
+    }
+}
 
 .jq_question_answers_cont form{
 	overflow:hidden;
