--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_green/css/jq_template.css
@@ -1273,3 +1273,13 @@ td.jq_calculus_custom_empty_cell{
 .certificateMessage{
     margin-bottom: 20px;
 }
+
+.jq_feedback_question-imgmatch_block {
+	max-width: 33%;
+	padding: 10px !important;
+}
+.review_question-imgmatch_block {
+	max-width: 50%;
+	padding: 10px !important;
+	vertical-align: middle;
+}
