--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -49,16 +49,17 @@ div.incorrect_answer_mini {
 }
 /*-------------------------------------------------------------------*/
 
-
 #jq_quiz_container hr{
     clear: both;
 }
 
 .jq_question_answers_cont{
-    /*overflow:hidden;*/
     width:85%;
-    /*	padding-left: 20px;*/
-    /*float:left;*/
+}
+@media(max-width: 768px) {
+    .jq_question_answers_cont{
+        width:100%;
+    }
 }
 
 .jq_question_answers_cont form{
@@ -750,4 +751,14 @@ table#quiz_table label {
 }
 td.quest_pos > label {
     margin: 2px 0px 5px;
+}
+
+.jq_feedback_question-imgmatch_block {
+    max-width: 33%;
+    padding: 10px !important;
+}
+.review_question-imgmatch_block {
+    max-width: 50%;
+    padding: 10px !important;
+    vertical-align: middle;
 }
