--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -1228,6 +1228,27 @@ td.jq_calculus_custom_empty_cell{
 	margin-left: 20px;
 }
 .jquiz_bottom {
-  margin: 0px -16px -16px;
-  padding: 20px 0px;
+	margin: 0px -16px -16px;
+	padding: 20px 0px;
+}
+
+@media(max-width: 768px) {
+	.jq_quiz_task_container > *{
+		display: block;
+		margin: 10px auto;
+		width: 70%;
+		text-align: center;
+	}
+	.jq_quiz_task_container a {
+		width: 70%;
+	}
+}
+.jq_feedback_question-imgmatch_block {
+	max-width: 33%;
+	padding: 10px !important;
+}
+.review_question-imgmatch_block {
+	max-width: 50%;
+	padding: 10px !important;
+	vertical-align: middle;
 }
