in the question of the Matching Drag&Drop type, fixed the positioning when dragging if the height of the blocks is different (long text in separate blocks)

--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
@@ -1730,3 +1730,8 @@ table#quiz_table label {
 .certificateMessage{
     margin-bottom: 20px;
 }
+.dragdrop_table div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
