--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
@@ -1267,3 +1267,9 @@ div.incorrect_answer_mini {
 .certificateMessage{
     margin-bottom: 20px;
 }
+
+.dragdrop_table div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
