--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
@@ -1823,3 +1823,9 @@ table#quiz_table label {
     padding: 10px !important;
     vertical-align: middle;
 }
+
+.dragdrop_table div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
