--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
@@ -1278,3 +1278,9 @@ div.incorrect_answer_mini {
 	padding: 10px !important;
 	vertical-align: middle;
 }
+
+.dragdrop_table div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
