--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
@@ -624,3 +624,9 @@ padding:5px;
 	padding: 10px !important;
 	vertical-align: middle;
 }
+
+.dragdrop_table div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
