--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -762,3 +762,9 @@ td.quest_pos > label {
     padding: 10px !important;
     vertical-align: middle;
 }
+
+.dragdrop_table div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
