--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -819,12 +819,12 @@ td.jq_match_image_element{
 .jq_result_key{
 	font-size:13px;
 	margin-left: 38px;
-	float:left;
+	/*float:left;*/
 }
 
 .jq_result_value
 {
-	float:right;
+	/*float:right;*/
 }
 .jq_result_bg{
 	background-color:#f5f5f5;
