--- a/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
+++ b/com_joomlaquiz_expert/site/views/templates/tmpl/joomlaquiz_t3_bs3/css/jq_template.css
@@ -1230,6 +1230,7 @@ td.jq_calculus_custom_empty_cell{
 .jquiz_bottom {
 	margin: 0px -16px -16px;
 	padding: 20px 0px;
+	min-height: 89px;
 }
 
 @media(max-width: 768px) {
