--- a/com_joomlaquiz/admin/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz/admin/assets/css/joomlaquiz.css
@@ -1,24 +1,19 @@
 #system-message-container.j-toggle-main.j-toggle-transition.span10 {
     width: 100%;
 }
-
 .brand{
   float: left !important;
 }
-
 .control-label{
     width: 250px !important;
-    padding-top: 0px !important;
+    padding-top: 0 !important;
 }
-
 .form-horizontal .controls{
     margin-left: 260px !important;
 }
-
 .form-horizontal .controls textarea {
     width: 90% !important;
 }
-
 .jqd-survey {
     border: 1px solid rgb(215,198,154);
     border-radius: 5px;
@@ -31,7 +26,9 @@
     top: 35px;
     box-shadow: 0 3px 10px 1px #ccc;
 }
-
+.jqd-survey-dashboard {
+    top: 120px;
+}
 .jqd-survey .icon-remove{
     position: absolute;
     font-size: 10px;
@@ -40,324 +37,221 @@
     color: #cccccc;
     cursor: pointer;
 }
-
 #close-icon:hover{
     color: #000000;
 }
-
 .gl_left {
   text-align: left !important;
 }
-
-
-#dashboard_items
-
-{
-
+#dashboard_items {
   margin-left: 5px;
   padding-top: 10px;
   clear:both;
-
 }
-
-
-
-#dashboard_items a
-
-{
-
+#dashboard_items a {
   vertical-align: middle;
-
 }
-
-
-
-.pmg-dashboard_item_icon
-
-{
-
-margin-left: 24px;
-
+.pmg-dashboard_item_icon {
+    margin-left: 24px;
 }
-
-
 /*ABOUT*/
-
-.a_comptitle
-
-{
-
+.a_comptitle {
 	font-size:16px;
-
 	font-weight: normal;
-
 }
-
-.about_table
-
-{
-
-  background-color: #F7F8F9; 
-
-  border: 1px solid #d5d5d5; 
-
-  width: 100%; 
-
-  padding: 10px; 
-
+.about_table {
+  background-color: #F7F8F9;
+  border: 1px solid #d5d5d5;
+  width: 100%;
+  padding: 10px;
   border-collapse: collapse;
-
 }
-
-
-
-.about_table td
-
-{
-
-  background-color:#fff;
-
-   padding: 4px;
-
+.about_table td {
+    background-color:#fff;
+    padding: 4px;
 }
-
-
-
-.about_table,  .about_table td, .about_table th, .about_table tr
-
-{
-
+.about_table,  .about_table td, .about_table th, .about_table tr {
   border: 1px solid #d5d5d5
-
 }
-
-
-
-.update_link
-
-{
-
-  cursor: pointer; 
-
+.update_link {
+  cursor: pointer;
   text-decoration:underline;
-
 }
-
-
-
-.thank_tabl
-
-{
-
-  background-color: #F7F8F9; 
-
-  border: 1px solid #d5d5d5; 
-
-  width: 100%; 
-
-  padding: 10px; 
-
+.thank_tabl {
+  background-color: #F7F8F9;
+  border: 1px solid #d5d5d5;
+  width: 100%;
+  padding: 10px;
   border-collapse: collapse;
-
 }
-
-
-
-.thank_ftd
-
-{
-
+.thank_ftd {
   background-color: #e7e8e9;
-
-  text-align:left; 
-
-  font-size:16px; 
-
-  font-weight:400; 
-
-  line-height:18px; 
-
-}
-
-.thank_fdiv
-
-{
-
-  float:left; 
-
-  width:720px;
-
-}
-
-.thank_rate
-
-{
-
-  float:left;
-
-  display: block; 
-
-  width: 234px; 
-
-  height: 60px; 
-
-  background: transparent url(http://cdn.hotscripts.com/img/widgets/rt_234x60-1.gif) 0 0 no-repeat; 
-
-  font: normal 11px/12px Arial, Helvetica, sans-serif; 
-
-  color: #fff; 
-
-  text-align: right;
-
-}
-
-
-
-.thank_form
-
-{
-
-  display: block; 
-
-  position: relative; 
-
-  left: 79px; 
-
-  margin: 0; 
-
-  padding: 8px 0 0; 
-
-  width: 153px; 
-
-  overflow: hidden; 
-
-  text-align: left;
-
-}
-
-.about_news
-
-{
-
-  background-color: #e7e8e9;
-
-  text-align:left; 
-
-  font-size:14px; 
-
-  font-weight:400; 
-
+  text-align:left;
+  font-size:16px;
+  font-weight:400;
   line-height:18px;
-
 }
-
+.thank_fdiv {
+  float:left;
+  width:720px;
+}
+.thank_rate {
+  float:left;
+  display: block;
+  width: 234px;
+  height: 60px;
+  background: transparent url(http://cdn.hotscripts.com/img/widgets/rt_234x60-1.gif) 0 0 no-repeat;
+  font: normal 11px/12px Arial, Helvetica, sans-serif;
+  color: #fff;
+  text-align: right;
+}
+.thank_form {
+  display: block;
+  position: relative;
+  left: 79px;
+  margin: 0;
+  padding: 8px 0 0;
+  width: 153px;
+  overflow: hidden;
+  text-align: left;
+}
+.about_news {
+  background-color: #e7e8e9;
+  text-align:left;
+  font-size:14px;
+  font-weight:400;
+  line-height:18px;
+}
 .jp-panel-logo {
-
     height: 20px;
-
     width: 20px;
-
     vertical-align: top;
-
 }
-
 #jp-navbar {
 	margin-bottom: 18px !important;
 }
-
 .container .brand {
-
     text-transform: uppercase;
-
     font-family: 'Lucida Sans Unicode', Helvetica, Arial;
-
 }
-
 #pgm_dashboard {
-
     margin:20px 10px 0 0;
-
     width:49%;
-
     min-height: 100px;
-
     height: auto;
-
-  /*  background: #ccc;
-
-    border-radius: 3px;
-
-    border:1px solid #AAA;*/
-
     float:left;
-
 }
-
 #pgm_collapse {
-
     width:49%;
-
     float:left;
-
     margin:20px 0 0 0;
-
 }
-
 .accordion-inner {
-
     overflow: hidden;
-
 }
-
 .pgm-dashboard_button {
-
     cursor: pointer;
-
     background: none repeat scroll 0 0 #FAFAFA;
-
     border: 1px solid #eed;
-
     border-radius: 3px 3px 3px 3px;
-
     float: left;
-
     margin: 5px;
-
     padding: 20px 10px;
-
     width: 100px;
-
     height: 66px;
-
     overflow: hidden;
-
 }
-
 .pgm-dashboard_button:hover {
-
     background-color: #fff;
-    box-shadow: 0px 0px 10px #eed;
-
+    box-shadow: 0 0 10px #eed;
 }
-
 .pgm-dashboard_button_text {
-
     text-align: center;
-
     width: 100%;
-
     overflow: hidden;
-
 }
-
-.accordion-inner
-
-{
-
-  padding: 0px !important;
-
+.accordion-inner {
+  padding: 0 !important;
 }
-
 #system-message-container.j-toggle-main{
 	float: none !important;
 }
+
+/* admin banners start */
+.admin_banners {
+    clear: both;
+    display: flex;
+    margin-top: 100px;
+    position: relative;
+    top: 50px;
+}
+.admin_banner {
+    display: flex;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    position: relative;
+    margin-right: 50px;
+    width: 400px;
+}
+.admin_banner:before, .admin_banner:after {
+    z-index: -1;
+    position: absolute;
+    content: "";
+    bottom: 18px;
+    left: 10px;
+    width: 50%;
+    top: 80%;
+    background: #777;
+    -webkit-box-shadow: 0 15px 10px #777;
+    -moz-box-shadow: 0 15px 10px #777;
+    box-shadow: 0 15px 10px #777;
+    -webkit-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    -ms-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+}
+.admin_banner:after {
+    -webkit-transform: rotate(3deg);
+    -moz-transform: rotate(3deg);
+    -o-transform: rotate(3deg);
+    -ms-transform: rotate(3deg);
+    transform: rotate(3deg);
+    right: 10px;
+    left: auto;
+}
+.admin_banner a {
+    text-decoration: underline;
+}
+@media (max-width: 980px) {
+    .admin_banners {
+        align-items: center;
+        flex-direction: column;
+    }
+    .admin_banner {
+        width: 80%;
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+    .admin_banner:last-of-type {
+        margin-bottom: 0;
+    }
+    .admin_banner:before, .admin_banner:after {
+        top: 60%;
+    }
+}
+.admin_banner .icon-remove {
+    position: absolute;
+    font-size: 10px;
+    right: 5px;
+    top: 5px;
+    color: #cccccc;
+    cursor: pointer;
+}
+/* admin banners end */
+
