--- a/com_joomlaquiz_expert/admin/models/forms/quiz.xml
+++ b/com_joomlaquiz_expert/admin/models/forms/quiz.xml
@@ -417,7 +417,9 @@
 			size="3"
 			label="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT" 
 			labelclass="control-label" 
-			description="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR">
+			description="COM_JOOMLAQUIZ_AUTO_BREAK_COUNT_DESCR"
+			showon="c_pool:1,2"
+		>
 		</field>
 		<field name="pool_rand" type="text" default="" size="10"
 				label="COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS" 
