quiz-edit-view added compatibility with Joomla 4 (tested on MariaDB 10.4)

--- a/com_joomlaquiz_expert/admin/assets/css/joomlaquiz.css
+++ b/com_joomlaquiz_expert/admin/assets/css/joomlaquiz.css
@@ -273,7 +273,9 @@ a.navbar-brand::before {
     content: '' !important;
 }
 .jqd-survey.j4 {
+    font-size: 12px;
     height: auto;
+    width: 470px;
 }
 .jqd-survey.j4 a {
     color: #3071a9 !important;
