--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_blue/css/jq_template.css
@@ -1735,3 +1735,6 @@ table#quiz_table label {
     justify-content: center;
     align-items: center;
 }
+.jq_mdropdown td.left_text {
+    padding-right: 5px;
+}
