--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_pretty_blue/css/jq_template.css
@@ -497,9 +497,7 @@ input:focus,
 }
 
 /*--------custom select question---------- */	
-.jq_mdropdown td{
-	text-align:left;
-}
+
 /* cusel */
 .cusel{
 	width:200px!important;
@@ -1054,6 +1052,9 @@ div.correct_answer
 .jq_mdropdown td {
     padding-bottom: 11px;
     text-align: left;
+}
+.jq_mdropdown td.left_text {
+	padding-right: 5px;
 }
 
 .jq_results_panel_table
