--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_simple/css/jq_template.css
@@ -617,3 +617,6 @@ html>/**/body .square {border-style:dotted;} /*all normal browsers*/
 	justify-content: center;
 	align-items: center;
 }
+.jq_mdropdown td.left_text {
+	padding-right: 5px;
+}
