--- a/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
+++ b/com_joomlaquiz/site/views/templates/tmpl/joomlaquiz_standard/css/jq_template.css
@@ -753,3 +753,6 @@ td.quest_pos > label {
     justify-content: center;
     align-items: center;
 }
+.jq_mdropdown td.left_text {
+    padding-right: 5px;
+}
